--- a/gonu-resume-website/src/components/MainSection.css
+++ b/gonu-resume-website/src/components/MainSection.css
@@ -7,8 +7,8 @@ video {
 }
 
 .main-container {
-    background: url('../images/img-1.jpg') center center/cover no-repeat;
-    height: 100vh;
+    background: url('../images/my-photo.JPG') center center/cover no-repeat;
+    height: 70vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,8 +20,9 @@ video {
 
 .main-container > h1 {
     color: #fff;
+    font-family: 'Sofia';
     font-size: 100px;
-    margin-top: 100px;
+    margin-top: 200px;
 }
 
 .main-container > p {
