--- a/gonu-resume-website/src/components/Skills.css
+++ b/gonu-resume-website/src/components/Skills.css
@@ -1,14 +1,18 @@
-video {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Bevan");
+
+* {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .skills-container {
-    background: url('../images/img-1.jpg') center center/cover no-repeat;
-    height: 100vh;
+    /* background: #8d7d43a2; */
+    background: url("../images/education.jpg");
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -18,11 +22,82 @@ video {
     object-fit: contain;
 }
 
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+#skills > h1 {
+    color: #fff;
+    font-family: 'Sofia';
+    font-size: 9vw;
+    margin-top: 10px;
+}
+
+.text {
+    color: white;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    font: 400 12vw/1.1 Bevan, sans-serif;
+    text-shadow: -0.0375em 0 0 rgba(48, 48, 48, 0.1);
+    letter-spacing: -.125em;
+  }
+
+.list-wrapper {
+    font-size: 35px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    padding: 0;
+    font-weight: bolder;
+    color:rgba(255, 255, 255, 0.75);
+    display: grid;
+    grid-template-areas: "list1 list2";
+    grid-column-gap: 15vh;
+}
+
+.list1 {
+    grid-area: list1;
+}
+
+.list2 {
+    grid-area: list2;
+}
+
+.list-wrapper ul li {
+    margin-bottom: 10px;
+}
+
+.list-wrapper ul li:before {
+    margin-bottom: 50px;
+    content: "▫️ "
+}
+
+/* .list-wrapper ul li:last-child {
+    margin-bottom: 0;
+}
+
+.list-wrapper ul li .icon {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background: #bf8d43;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    z-index: 0;
+} */
+
+
 .skills-container > h1 {
     color: #fff;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Libre Baskerville', serif;
     font-size: 100px;
-    margin-top: 0px;
+    margin-top: 50px;
 }
 
 .skills-container > p {
@@ -32,13 +107,6 @@ video {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.main-btns {
-    margin-top: 32px;;
-}
-
-.main-btns .btn {
-    margin: 6px;
-}
 
 @media screen and (max-width: 960px) {
     .skills-container > h1 {
@@ -57,12 +125,8 @@ video {
         font-size: 25px;
     }
 
-    .btn-mobile {
-        display: block;
-        text-decoration: none;
-    }
-    
-    .btn {
-        width: 100%;
+    .list-wrapper {
+        grid-template-areas: "list1"
+                            "list2";
     }
 }
