--- a/gonu-resume-website/src/components/Cards.css
+++ b/gonu-resume-website/src/components/Cards.css
@@ -1,11 +1,34 @@
 .cards {
     padding: 4rem;
-    background: #fff;
+    /* background: linear-gradient( #2C2C2C, rgb(162, 142, 101 70%)); */
+    background: linear-gradient(#2C2C2C ,rgb(162, 142, 101)80%);
   }
+
+.cards2 {
+  padding: 4rem;
+  background: rgb(162, 142, 101);
+}
   
-  h1 {
+  /* h1 {
     text-align: center;
-  }
+  } */
+
+
+.cards > h1 {
+  color: #fff;
+  font-family: 'Sofia';
+  text-align: center;
+  font-size: 7vw;
+  margin-top: 10px;
+}
+
+.cards2 > h1 {
+  color: #fff;
+  font-family: 'Sofia';
+  text-align: center;
+  font-size: 7vw;
+  margin-top: 10px;
+}
   
   .cards__container {
     display: flex;
@@ -27,6 +50,7 @@
   }
   
   .cards__item {
+    background-color: white;
     display: flex;
     flex: 1;
     margin: 0 1rem;
