--- a/gonu-resume-website/src/components/MainSection.css
+++ b/gonu-resume-website/src/components/MainSection.css
@@ -1,13 +1,7 @@
-video {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-}
-
 .main-container {
-    background: url('../images/my-photo.JPG') center center/cover no-repeat;
+    background: url('../images/mugshot2.jpg') center center/cover no-repeat;
+    background-size: contain;
+    background-color:rgb(162, 142, 101);
     height: 70vh;
     width: 100%;
     display: flex;
@@ -18,11 +12,15 @@ video {
     object-fit: contain;
 }
 
+.smaller {
+    height: 30vh;
+}
+
 .main-container > h1 {
     color: #fff;
     font-family: 'Sofia';
     font-size: 100px;
-    margin-top: 200px;
+    margin-top: 300px;
 }
 
 .main-container > p {
@@ -43,26 +41,17 @@ video {
 @media screen and (max-width: 960px) {
     .main-container > h1 {
         font-size: 70px;
-        margin-top: 150px;
+        margin-top: 30vh;
     }
 }
 
 @media screen and (max-width: 768px) {
     .main-container > h1 {
         font-size: 50px;
-        margin-top: 100px;
+        margin-top: 30vh;
     }
 
     .main-container > p {
         font-size: 25px;
-    }
-
-    .btn-mobile {
-        display: block;
-        text-decoration: none;
-    }
-    
-    .btn {
-        width: 100%;
     }
 }
