--- a/gonu-resume-website/src/components/Cards.css
+++ b/gonu-resume-website/src/components/Cards.css
@@ -1,12 +1,14 @@
 .cards {
-    padding: 4rem;
+  padding-top: 100px;
+  padding-bottom: 100px;
     /* background: linear-gradient( #2C2C2C, rgb(162, 142, 101 70%)); */
-    background: linear-gradient(#2C2C2C ,rgb(162, 142, 101)80%);
+    background: linear-gradient(#81868f ,#508a0574 80%);
   }
 
 .cards2 {
-  padding: 4rem;
-  background: rgb(162, 142, 101);
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background: #508a0574;
 }
   
   /* h1 {
@@ -16,7 +18,7 @@
 
 .cards > h1 {
   color: #fff;
-  font-family: 'Sofia';
+  font-family: 'Lucida Grande';
   text-align: center;
   font-size: 7vw;
   margin-top: 10px;
@@ -24,7 +26,7 @@
 
 .cards2 > h1 {
   color: #fff;
-  font-family: 'Sofia';
+  font-family: 'Lucida Grande';
   text-align: center;
   font-size: 7vw;
   margin-top: 10px;
@@ -46,7 +48,7 @@
   
   .cards__items {
     margin-bottom: 24px;
-    width: 50vw;
+    width: 80vw;
   }
   
   .cards__item {
@@ -141,3 +143,17 @@
       margin-bottom: 2rem;
     }
   }
+
+  @media screen and (max-width: 768px) {
+    .cards__item {
+      width: 400px;
+      /* padding-left: 5px;
+      margin-bottom: 5px; */
+    }
+
+    .cards__wrapper {
+      position: relative;
+      padding-top: 10px;
+      padding-right: 30px;
+    }
+}
