--- a/gonu-resume-website/src/components/Education.css
+++ b/gonu-resume-website/src/components/Education.css
@@ -1,9 +1,11 @@
 .educ-container {
+    padding-top: 100px;
+    padding-bottom: 100px;
     /* background: url('../images/img-1.jpg') center center/cover no-repeat; */
     height: 100%;
     width: 100%;
     /* background-color: rgb(235, 213, 167); */
-    background: linear-gradient( rgb(162, 142, 101), #2C2C2C 70%);
+    background: linear-gradient( #508a0574, #6c7155 85%);
     /* background: url("../images/education.jpg"); */
     display: flex;
     flex-direction: column;
@@ -16,21 +18,25 @@
 
 .educ-container > h1 {
     color: #fff;
-    font-family: 'Sofia';
+    font-family: 'Lucida Grande';
     /* -webkit-text-stroke: 0.5px rgb(99, 12, 12); */
-    font-size: 10vw;
+    font-size: 8vw;
     margin-top: 10px;
 }
 
 .educ-list {
     margin-top: 20px;
     color: #fff;
+    /* width: 100vh; */
+    /* display: block;
+    justify-content: center; */
     font-size: 32px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .educ-detail {
     list-style: none;
+    width: 50vh;
     margin-left: 0px;
     padding: 0;
 }
@@ -46,12 +52,14 @@
     grid-template-areas: "image detail";
 }
 
-#sfu-detail {
-    margin-left: -9vh;
-}
+/* #sfu-detail {
+    width: 60vh;
+    margin-left: 0px;
+} */
 
 .my-educ > img {
     grid-area: image;
+    height: 9vh;
 }
 
 .my-educ > div {
@@ -83,6 +91,10 @@
     #sfu-detail {
         margin-left: 0vh;
     }
+
+    .my-educ > img {
+        width: 30vh;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -97,11 +109,17 @@
 
     .my-educ > div {
         grid-column-start: 1;
+        padding-left: 140px;
     }
 
     #sfu-detail {
         margin-left: 0;
     }
+
+    .my-educ > img{
+        margin-left: 200px;
+    }
+
 
     .my-educ {
         display: grid;
