--- a/gonu-resume-website/src/components/Footer.css
+++ b/gonu-resume-website/src/components/Footer.css
@@ -45,11 +45,29 @@
 }
 
 @media screen and (max-width: 820px) {
-    /* .footer-link-wrapper {
-        flex-direction: column;
+    .footer-logo {
+        grid-area: logo;
+    }
+
+    #phoneNum {
+        grid-area: phone;
+    }
+
+    #email {
+        grid-area: email;
+    }
+
+    .social-icons {
+        grid-area: icon;
     }
 
     .social-media-wrap {
-        flex-direction: column;
-    } */
+        margin: auto auto auto auto;
+        display: grid;
+        width: 820px;
+        grid-template-areas:    "logo"
+                                "phone"
+                                "email"
+                                "icon";
+    }
 }
