--- a/gonu-resume-website/src/components/Skills.css
+++ b/gonu-resume-website/src/components/Skills.css
@@ -11,7 +11,10 @@
 
 .skills-container {
     /* background: #8d7d43a2; */
-    background: url("../images/education.jpg");
+    background: url("../images/develop.jpg");
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-size: cover;
     height: 100%;
     width: 100%;
     display: flex;
@@ -20,6 +23,7 @@
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
     object-fit: contain;
+
 }
 
 .wrapper {
@@ -33,8 +37,8 @@
 
 #skills > h1 {
     color: #fff;
-    font-family: 'Sofia';
-    font-size: 9vw;
+    font-family: 'Lucida Grande';
+    font-size: 8vw;
     margin-top: 10px;
 }
 
@@ -54,7 +58,7 @@
     margin-left: 0px;
     padding: 0;
     font-weight: bolder;
-    color:rgba(255, 255, 255, 0.75);
+    color:rgb(255, 255, 255);
     display: grid;
     grid-template-areas: "list1 list2";
     grid-column-gap: 15vh;
